--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
-giada (0.0.0-0~rzr1) UNRELEASED; urgency=medium
+giada (0.0.0-0~rzr0) unstable; urgency=medium
 
   * Non-maintainer upload.
+    http://rzr.online.fr/q/snapshot
 
  -- Philippe Coval <rzr@gna.org>  Sat, 19 Apr 2014 10:40:59 +0200
 
